dongle-smartcontract/test_results_v8.txt
   Compiling dongle-contract v0.1.0 (C:\Users\user\Dongle-Smartcontract\dongle-smartcontract)
warning: unused import: `Project`
 --> src\verification_registry.rs:8:20
  |
8 | use crate::types::{Project, VerificationRecord, VerificationStatus};
  |                    ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::constants::MAX_PROJECTS_PER_USER`
 --> src\test.rs:3:5
  |
3 | use crate::constants::MAX_PROJECTS_PER_USER;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::errors::ContractError as Error`
 --> src\test.rs:4:5
  |
4 | use crate::errors::ContractError as Error;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `FeeConfig` and `VerificationStatus`
 --> src\test.rs:5:20
  |
5 | use crate::types::{FeeConfig, VerificationStatus};
  |                    ^^^^^^^^^  ^^^^^^^^^^^^^^^^^^

warning: unused import: `Vec`
 --> src\test.rs:9:58
  |
9 | use soroban_sdk::{Address, Env, String as SorobanString, Vec};
  |                                                          ^^^

error[E0308]: mismatched types
   --> src\lib.rs:131:9
    |
131 |         VerificationRegistry::request_verification(&env, project_id, requester, evidence_cid)
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Result<(), ContractError>`
    |
    = note: expected unit type `()`
                    found enum `core::result::Result<(), ContractError>`
help: consider using a semicolon here
    |
131 |         VerificationRegistry::request_verification(&env, project_id, requester, evidence_cid);
    |                                                                                              +
help: try adding a return type
    |
130 |     ) -> core::result::Result<(), ContractError> {
    |       ++++++++++++++++++++++++++++++++++++++++++
help: consider using `Result::expect` to unwrap the `core::result::Result<(), ContractError>` value, panicking if the value is a `Result::Err`
    |
131 |         VerificationRegistry::request_verification(&env, project_id, requester, evidence_cid).expect("REASON")
    |                                                                                              +++++++++++++++++

warning: variable does not need to be mutable
   --> src\review_registry.rs:126:13
    |
126 |         let mut user_reviews: soroban_sdk::Vec<u64> = env
    |             ----^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `evidence_cid`
  --> src\verification_registry.rs:21:9
   |
21 |         evidence_cid: String,
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_evidence_cid`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `dongle-contract` (lib) generated 3 warnings (1 duplicate)
error: could not compile `dongle-contract` (lib) due to 1 previous error; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `dongle-contract` (lib test) generated 7 warnings (2 duplicates)
error: could not compile `dongle-contract` (lib test) due to 1 previous error; 7 warnings emitted
